# new_route

./: .env  .gitignore  Dockerfile  README.md  docker-compose-develop.yml  docker-compose.yml  pyproject.toml
app/: loggers.py  main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/routers/: message_thread.py  request.py  settings.py  testing.py  text.py  voice.py
app/core/: config.py
app/models/: database_models.py
app/schemas/: requests_responses.py
app/services/: openai_operations.py  request_processor.py  settings.py  text_formatters.py  threads.py  user.py
app/services/assistant/: agent.py  tools.py
app/services/voice/: formatter.py  openai_speech.py
app/services/wsocket/: errors.py  schemas.py  websocket.py
migrations/: env.py
migrations/versions/: 10af9ae36d9e_initial.py  638e1785d0a5_fix_foreign_keys.py  6627f6f80ac3_add_relationship.py  7e97c42d2180_fix_foreign_keys.py  9474d16b4a58_rename_col_to_voise_answer_and_change_.py  d4c5cef90dc8_initial.py  ded271fb3af3_delete_user_settings_id_col_and_make_.py  e0f178993f1d_add_messagethreads.py  fdf6b76ef711_fix_foreign_keys.py
