[tool.poetry]
name = "new_route"
version = "0.1.0"
description = "API for gpt route with open ai assistant and voice input/output"
authors = ["Izbushko izbaizbushka@gmmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.13.0"
fastapi = "^0.105.0"
websocket = "^0.2.1"
psycopg2-binary = "^2.9.9"
sqlmodel = "^0.0.14"
pydantic-settings = "^2.1.0"
passlib = "^1.7.4"
asyncpg = "^0.29.0"
uvicorn = "^0.24.0.post1"
pyjwt = "^2.8.0"
pydantic = {extras = ["email"], version = "^2.5.2"}
python-multipart = "^0.0.6"
gunicorn = "^21.2.0"
bcrypt = "4.0.1"
openai = "^1.8.0"



[tool.poetry.group.dev.dependencies]
langchain = "^0.0.350"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
